--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,4 +41,11 @@
         android:layout_height="wrap_content"
         android:text="Show Profile"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+    <Button
+        android:id="@+id/buttonML"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Show ML"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 </androidx.appcompat.widget.LinearLayoutCompat>
