--- a/app/src/main/res/layout/activity_timetable.xml
+++ b/app/src/main/res/layout/activity_timetable.xml
@@ -54,6 +54,8 @@
         app:row_count="25"
         app:start_time="0"
         app:header_title="@array/my_header_title"
+        app:header_highlight_color="@color/highlight"
+        app:header_highlight_type="color"
         />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
