바꿔봣습니다

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,72 +5,99 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#7ab9fd"
-    tools:context="com.js.firebaseauthentication.MainActivity">
 
-    <TextView
-        android:layout_gravity="center_horizontal"
+    tools:context="com.android.MakeYouStudy.LoginActivity">
+
+    <EditText
+        android:id="@+id/ed_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:textSize="23dp"
-        android:textColor="@color/colorAccent"
-        android:text="로그인" />
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="50dp"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
+        android:ems="10"
+        android:hint="example@example.com"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.469"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextEmail"
-        android:layout_width="250dp"
+        android:id="@+id/ed_password"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_gravity="center_horizontal"
-        android:hint="Enter email"
-        android:inputType="textEmailAddress" />
-
-    <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="250dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="Enter password"
-        android:inputType="textPassword" />
+        android:layout_marginTop="30dp"
+        android:ems="10"
+        android:hint="****"
+        android:layout_gravity="center"
+        app:layout_constraintEnd_toEndOf="@+id/ed_email"
+        app:layout_constraintStart_toStartOf="@+id/ed_email"
+        app:layout_constraintTop_toBottomOf="@+id/ed_email" />
 
     <Button
-        android:id="@+id/buttonSignup"
-        android:layout_width="200dp"
+        android:id="@+id/bt_login"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:layout_gravity="center_horizontal"
-        android:text="로그인" />
+        android:layout_marginTop="30dp"
+        android:text="로그인"
+        android:layout_gravity="center"
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:gravity="center_horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        app:layout_constraintEnd_toEndOf="@+id/ed_password"
+        app:layout_constraintStart_toStartOf="@+id/ed_password"
+        app:layout_constraintTop_toBottomOf="@+id/ed_password" />
 
-        <TextView
-            android:text="신규 회원가입"
-            android:id="@+id/textViewSignin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+    <Button
 
-        <TextView
-            android:text="패스워드가 기억나지 않습니까?"
-            android:textColor="@color/colorAccent"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/textViewFindpassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        android:id="@+id/bt_signup"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="회원가입"
+        android:layout_gravity="center"
 
-    </LinearLayout>
+        app:layout_constraintEnd_toEndOf="@+id/bt_login"
+        app:layout_constraintStart_toStartOf="@+id/bt_login"
+        app:layout_constraintTop_toBottomOf="@+id/bt_login" />
+
+    <Button
+        android:id="@+id/bt_find"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:text="비밀번호 찾기"
+        android:layout_gravity="center"
+
+        android:layout_marginTop="30dp"
+        app:layout_constraintEnd_toEndOf="@+id/bt_signup"
+        app:layout_constraintStart_toStartOf="@+id/bt_signup"
+        app:layout_constraintTop_toBottomOf="@+id/bt_signup"/>
 
 
-    <TextView
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/colorAccent"
-        android:id="@+id/textviewMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/btn_googleSignIn"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center"
+
+        app:layout_constraintEnd_toEndOf="@+id/bt_find"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/bt_find"
+        app:layout_constraintTop_toBottomOf="@+id/bt_find" />
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="220dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center"
+
+        android:layout_marginTop="30dp"
+        app:layout_constraintEnd_toEndOf="@+id/btn_googleSignIn"
+        app:layout_constraintStart_toStartOf="@+id/btn_googleSignIn"
+        app:layout_constraintTop_toBottomOf="@+id/btn_googleSignIn" />
+
 
 </LinearLayout>
