--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#7ab9fd"
-    tools:context="com.js.firebaseauthentication.MainActivity">
+    tools:context="com.android.MakeYouStudy.FindActivity">
 
     <TextView
         android:layout_gravity="center_horizontal"
@@ -24,28 +23,27 @@
         android:layout_height="wrap_content" />
 
     <EditText
-        android:id="@+id/editTextUserEmail"
-        android:layout_width="250dp"
+        android:id="@+id/findemail"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_gravity="center_horizontal"
-        android:hint="Enter email"
-        android:inputType="textEmailAddress" />
+        android:layout_gravity="center"
+        android:layout_marginTop="100dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="example@example.com"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/buttonFind"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:layout_gravity="center_horizontal"
-        android:text="Email 발송" />
-
-    <TextView
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/colorAccent"
-        android:id="@+id/textviewMessage"
+        android:id="@+id/but_findpassword"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="63dp"
+        android:layout_gravity="center"
+        android:text="등록된 이메일로 전송"
+        app:layout_constraintEnd_toEndOf="@+id/findemail"
+        app:layout_constraintStart_toStartOf="@+id/findemail"
+        app:layout_constraintTop_toBottomOf="@+id/findemail" />
 
 </LinearLayout>
 
