--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,68 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.android.MakeYouStudy.SignUpActivity">
-
-    <TextView
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:textSize="23dp"
-        android:textColor="@color/colorAccent"
-        android:text="회원가입" />
-
-    <TextView
-        android:layout_gravity="center_horizontal"
-        android:text="이 앱은 회원가입을 해야 정상적으로 사용할 수 있습니다.\n Email로 등록해 주세요."
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    tools:context=".SignUpActivity">
 
     <EditText
-        android:id="@+id/editTextEmail"
-        android:layout_width="250dp"
+        android:id="@+id/ed_signupemail"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_gravity="center_horizontal"
-        android:hint="Enter email"
-        android:inputType="textEmailAddress" />
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="50dp"
+        android:ems="10"
+        android:hint="example@example.com"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.469"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="250dp"
-        android:layout_gravity="center_horizontal"
+        android:id="@+id/ed_signuppassword"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="Enter password"
-        android:inputType="textPassword" />
+        android:layout_marginTop="30dp"
+        android:ems="10"
+        android:hint="****"
+        app:layout_constraintEnd_toEndOf="@+id/ed_signupemail"
+        app:layout_constraintStart_toStartOf="@+id/ed_signupemail"
+        app:layout_constraintTop_toBottomOf="@+id/ed_signupemail" />
 
     <Button
-        android:id="@+id/buttonSignup"
-        android:layout_width="200dp"
+        android:id="@+id/bt_newsignup"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:layout_gravity="center_horizontal"
-        android:text="회원가입" />
+        android:layout_marginTop="30dp"
+        android:text="회원가입"
+        app:layout_constraintEnd_toEndOf="@+id/ed_signuppassword"
+        app:layout_constraintStart_toStartOf="@+id/ed_signuppassword"
+        app:layout_constraintTop_toBottomOf="@+id/ed_signuppassword" />
 
-    <TextView
-        android:text="회원이시면 여기에서 로그인 해주세요."
-        android:id="@+id/textViewSignin"
-        android:textAlignment="center"
-        android:layout_margin="15dp"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/bt_backmain"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal" />
-
-    <TextView
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/colorAccent"
-        android:id="@+id/textviewMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_marginTop="20dp"
+        android:text="로그인화면가기"
+        app:layout_constraintEnd_toEndOf="@+id/bt_newsignup"
+        app:layout_constraintStart_toStartOf="@+id/bt_newsignup"
+        app:layout_constraintTop_toBottomOf="@+id/bt_newsignup" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
