--- a/app/src/main/res/layout/activity_attendance_check.xml
+++ b/app/src/main/res/layout/activity_attendance_check.xml
@@ -14,4 +14,18 @@
         android:layout_gravity="center_horizontal"
         android:layout_margin="15dp"
         android:text="출석체크" />
+
+    <Button
+        android:id="@+id/btnTextCheck"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Text Recognition" />
+
+    <Button
+        android:id="@+id/btnSkip"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Skip" />
 </LinearLayout>
