--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -16,8 +21,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:type="one_day_picker"
-        app:eventsEnabled="true"
-        />
+        app:eventsEnabled="true"        />
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,3 +58,4 @@
             android:text="일정 저장" />
     </LinearLayout>
 </LinearLayout>
+    </ScrollView>
