--- a/app/src/main/res/layout/activity_attendance_check.xml
+++ b/app/src/main/res/layout/activity_attendance_check.xml
@@ -28,4 +28,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="Skip" />
+
+    <Button
+        android:id="@+id/btnOpencv"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Button" />
 </LinearLayout>
