--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="Check">#03DAC5</color>
     <color name="Total">#8ECBFF</color>
 
+    <color name="attendanceBG">#E3F9FF</color>
 </resources>
