--- a/app/src/main/res/layout/activity_attendance_rate.xml
+++ b/app/src/main/res/layout/activity_attendance_rate.xml
@@ -7,6 +7,14 @@
     android:orientation="vertical"
     tools:context=".AttendanceRateActivity">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:scaleType="fitXY"
+        android:background="@drawable/rate_image"
+        />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,12 +24,28 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="168dp"
+                android:layout_height="35dp"
+                android:background="@drawable/today_rate"
+                android:layout_gravity="center"
+                android:scaleType="fitXY" />
+
             <com.github.mikephil.charting.charts.PieChart
                 android:id="@+id/piechart"
                 android:layout_width="match_parent"
                 android:layout_height="250dp">
 
             </com.github.mikephil.charting.charts.PieChart>
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="250dp"
+                android:layout_height="40dp"
+                android:background="@drawable/week_rate"
+                android:layout_gravity="center"
+                android:scaleType="fitXY" />
 
             <com.github.mikephil.charting.charts.BarChart
                 android:id="@+id/barchart"
