--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:focusable="true"
     android:focusableInTouchMode="true"
-
     tools:context=".MainActivity"
     >
 
     <com.applandeo.materialcalendarview.CalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:type="one_day_picker"
         app:eventsEnabled="true"        />
-
 
 
     <LinearLayout
@@ -30,15 +28,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="5sp">
-
-        <TextView
-            android:id="@+id/viewDatePick"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#DDDDDD"
-            android:gravity="center"
-            android:text=""
-            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/edtDairy"
@@ -51,11 +40,27 @@
             android:padding="7sp"
             android:text="" />
 
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        >
+
         <Button
             android:id="@+id/btnSave"
-            android:layout_width="match_parent"
-            android:layout_height="81dp"
-            android:text="일정 저장" />
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:background="#00ff0000"
+            android:text="" />
+
     </LinearLayout>
+
 </LinearLayout>
-    </ScrollView>
+
+
+</ScrollView>
