--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -7,29 +7,41 @@
     android:orientation="vertical"
     tools:context=".EditActivity">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:scaleType="fitXY"
+        android:background="@drawable/timetable_setting"
+        />
+
     <include layout="@layout/edit_appbar" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <EditText
             android:id="@+id/subject_edit"
-            android:layout_width="match_parent"
+            android:layout_width="390dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:hint="Subject" />
 
         <EditText
             android:id="@+id/classroom_edit"
-            android:layout_width="match_parent"
+            android:layout_width="390dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:hint="Classroom" />
 
         <EditText
             android:id="@+id/professor_edit"
-            android:layout_width="match_parent"
+            android:layout_width="390dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:hint="Professor" />
 
         <include layout="@layout/time_box"/>
