--- a/app/src/main/res/layout/activity_image_matching.xml
+++ b/app/src/main/res/layout/activity_image_matching.xml
@@ -3,28 +3,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="#d5cec2">
 
 
-    <ImageView
-        android:id="@+id/result"
+        <ImageView
+            android:id="@+id/result"
+            android:layout_width="match_parent"
+            android:layout_height="461dp"
+            android:background="@drawable/image_opencv" />
+
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="228dp"
-        android:contentDescription="@null" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        >
+        <Button
+            android:id="@+id/btnCamera"
+            android:layout_width="119dp"
+            android:layout_height="115dp"
+            android:layout_gravity="center"
 
+            android:background="@drawable/ic_camera"
+            android:text="" />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="이미지뷰"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <Button
-        android:id="@+id/btnCamera"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Camera" />
-
-
+    </LinearLayout>
 </LinearLayout>
+
+
