--- a/app/src/main/res/layout/tab_write.xml
+++ b/app/src/main/res/layout/tab_write.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
     <EditText
         android:id="@+id/edit_title_write"
@@ -18,25 +25,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#efedbf"
-        android:lines="15"
+        android:lines="20"
         android:hint="내용을 입력하세요."
         android:gravity="top|left"
         android:layout_weight="1" />
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="5"
         android:background="#e1f1cb">
 
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="match_parent"
-            android:text="저장"
+            android:text=""
+            android:layout_gravity="center"
             android:id="@+id/save_btn_write"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="@drawable/ic_save"
+            />
 
     </LinearLayout>
 
 </LinearLayout>
+</ScrollView>
